--- a/notebooks/01_eda.ipynb
+++ b/notebooks/01_eda.ipynb
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_vessel = pd.read_excel(\"../data/01_raw/oge_vessel_data.xlsx\")"
+    "df_oge = pd.read_excel(\"../data/01_raw/oge_data.xlsx\")"
    ]
   },
   {
@@ -82,17 +82,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "24099b30",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_vessel = df_vessel.sort_values(\"Cycle\")"
+    "df_oge = df_oge.sort_values(\"Cycle\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "0ce26475",
    "metadata": {},
    "outputs": [
@@ -268,22 +268,22 @@
    ],
    "source": [
     "display(\n",
-    "    df_vessel.head(),\n",
-    "    df_vessel.shape,\n",
-    "    df_vessel.dtypes,\n",
-    "    df_vessel.isna().sum()\n",
+    "    df_oge.head(),\n",
+    "    df_oge.shape,\n",
+    "    df_oge.dtypes,\n",
+    "    df_oge.isna().sum()\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "30ecf5f0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Checking if there's incorrect cycle id\n",
-    "df_id = df_vessel[[\"Cycle\"]].reset_index()\n",
+    "df_id = df_oge[[\"Cycle\"]].reset_index()\n",
     "\n",
     "df_id[\"index\"] = df_id[\"index\"]+1\n",
     "df_id[\"check\"] = df_id.eval(\"index == Cycle\")\n",
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "id": "3d9edc0b",
    "metadata": {},
    "outputs": [
@@ -332,8 +332,8 @@
    "source": [
     "# number of presets of each type and its use frequency\n",
     "display(\n",
-    "    df_vessel[\"Preset_1\"].value_counts(),\n",
-    "    df_vessel[\"Preset_2\"].value_counts(),\n",
+    "    df_oge[\"Preset_1\"].value_counts(),\n",
+    "    df_oge[\"Preset_2\"].value_counts(),\n",
     ")"
    ]
   },
@@ -507,13 +507,13 @@
    ],
    "source": [
     "# basic statistics\n",
-    "df_describe = df_vessel[features].describe()\n",
+    "df_describe = df_oge[features].describe()\n",
     "df_describe"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "id": "96f7bf36",
    "metadata": {},
    "outputs": [
@@ -580,13 +580,13 @@
    ],
    "source": [
     "for feature in features:\n",
-    "    mean = df_vessel.groupby(\"Fail\")[feature].mean()\n",
+    "    mean = df_oge.groupby(\"Fail\")[feature].mean()\n",
     "    op_mean = mean.loc[False]\n",
     "    fail_mean = mean.loc[True]\n",
     "\n",
     "    plt.figure(figsize=(5, 3))\n",
     "    sns.histplot(\n",
-    "        data=df_vessel,\n",
+    "        data=df_oge,\n",
     "        x=feature,\n",
     "        hue=\"Fail\",\n",
     "    )\n",
